# soccer-player-backend

./: pyproject.toml  server.py
controllers/: members.py  players.py
helpers/: array.py
services/clubs/: clubs.py
services/countries/: countries.py
services/players/: players.py  players_service.py
