[tool.poetry]
name = "flask-server"
version = "0.1.0"
description = ""
authors = ["EMcKague <evan.mckague@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_server"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
